<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.cegeka.retrobox.NewRetroActivity$PlaceholderFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/new_retro_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_retro_name"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_retro_start"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/new_retro_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_weight="4"
            android:paddingLeft="5dp" />

        <TextView
            android:id="@+id/new_retro_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_weight="6" />

    </LinearLayout>

    <EditText
        android:id="@+id/new_retro_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_retro_place"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/new_retro_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
