<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/activity_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activity_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/activity_detail_title" />

    <TextView
        android:id="@+id/activity_detail_materials_title"
        android:text="@string/activity_detail_materials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_below="@id/activity_detail_description" />

    <TextView
        android:id="@+id/activity_detail_materials"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/activity_detail_materials_title" />

    <TextView
        android:id="@+id/activity_detail_duration_title"
        android:text="@string/activity_detail_duration"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@id/activity_detail_materials" />

    <TextView
        android:id="@+id/activity_detail_duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/activity_detail_duration_title" />

    <Button
        android:id="@+id/activity_detail_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_detail_select"
        android:layout_alignParentBottom="true" />
</RelativeLayout>